Remove temporary metric that violates I/O restrictions.

BUG=739941

Change-Id: I385237e7643707381109879908bf5d493bf62345
Reviewed-on: https://chromium-review.googlesource.com/563542
Commit-Queue: Brian White <bcwhite@chromium.org>
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485137}
Former-commit-id: f2903545a51ae356bf297cdd5735f98521daa410