components/metrics/file_metrics_provider.cc
@@ -579,14 +579,6 @@ bool FileMetricsProvider::ProvideIndependentMetrics(
       UMA_HISTOGRAM_COUNTS_10000(
           "UMA.FileMetricsProvider.EmbeddedProfile.DroppedHistogramCount",
           histogram_count);
-
-      base::File::Info info;
-      if (base::GetFileInfo(source->path, &info)) {
-        UMA_HISTOGRAM_CUSTOM_COUNTS(
-            "UMA.FileMetricsProvider.EmbeddedProfile.DroppedFileAge",
-            (base::Time::Now() - info.last_modified).InMinutes(), 1,
-            base::TimeDelta::FromDays(30).InMinutes(), 50);
-      }
     }
 
     // Regardless of whether this source was successfully recorded, it is never
